--- a/styles/styles.css
+++ b/styles/styles.css
@@ -514,3 +514,16 @@ h1{
     color: white;
     text-align: left;
 }
+.col0{
+    flex: 100%;
+    max-width: 100%;
+    padding: 15px;
+    margin-left: 20px;
+  }
+.border0{
+    width: 160px;
+    height: 5px;
+    background: maroon;
+    margin: 5px auto;
+    margin-top: -20px;
+  }
